--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<body>
 		<h1>一个未开发的梦想，起航了！</h1>
 	</body>
