解决内容乱码测试

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>一个未开发的梦想起航了！</h1>
+		<h1>《海贼王》如果革命军推翻天龙人和世界政府后，会怎样管理世界？
+
+黑鼠鼠
+
+百家号11-2812:54
+革命军是一定会推翻天龙人和世界政府的，世界政府的最高权力者不过是天龙人的代言人，只推翻天龙人而留着世界政府，这是不可能的，人家就是一体的，但是海军确是可以留下的，海军中很多都是怀着保卫世界和平心态的有识之士，像藤虎这样的人。萨博他们还是斗争经验不足，趁着世界会议期间虽然潜入到了玛丽乔亚，但对世界政府的内幕了解太少，咱们局外人就知道依姆这个存在，依姆向五老星传达的灭灯指令，大概就是对反对派国家采取抹除政策，手段可能十分暴力，很多人猜测的那样第三件古代兵器在天龙人手里。
+
+
+《海贼王》的世界观里除了红土大陆之外没有其他大陆这一点很奇怪，怎么别处都是小岛呢，依照大陆漂移假说，应该是分裂成几块大陆才对，这里我就大胆的猜了，跟空白的100年有关，那100年天空人犯下种种罪行，把反对他们统治的所有强国都消灭了，用的就是古代兵器天王，直接把大陆击碎成无数的小岛，人类的人口都因此大减员。
+
+
+罗杰的大秘宝本身其实没什么价值，找寻大秘宝的情报才是罗杰想要传达给世人的，想要大秘宝就要凑齐所有历史正文，并且还要解读出他们，一旦解读出来也就知道这空白100年的历史了，这就是罗杰的套路，让世界上所有强者都去追寻他的大秘宝，追寻的途中自然也就慢慢解读出这些，知道的人越多，天龙人的统治地位就越摇摇欲坠，甚至可能海军都不再效力他们，因为他们是整个人类的罪人。
+
+
+所以猜测革命军推翻天龙人和世界政府是在路飞成为海贼王之后，路飞很可能会把所有历史正文和解读公布出来，最终要做的事情就是炸毁玛丽乔亚，让四海从这里交融，这也解释了当初鱼人夏莉的预言，路飞确实会毁灭鱼人岛，谁让鱼人岛就在玛丽乔亚正下方呢，不过此后鱼人就可以上岸生活了。革命军一直掌握人心，再想攻陷世界政府就轻而易举了，说不定都能直接把赤犬策反过来。即便以前革命剧没想过夺权后该怎么办，他们也必须建立新的世界政府，世界必须是统一的，不管是继续让赤犬当元帅，还是萨博当元帅，有一件事还是会做的，那就是剿匪，大海贼时代终将结束，哪个政权都不会海贼横行。</h1>
 	</body>
 </html>
